--- a/src/app/authentication/components/login/login.component.html
+++ b/src/app/authentication/components/login/login.component.html
@@ -6,7 +6,7 @@
         <div class="card-body">
             <!-- Logo -->
             <div class="app-brand justify-content-center">
-            <a href="index.html" class="app-brand-link gap-2">
+            <a class="app-brand-link gap-2">
                 <span class="app-brand-logo demo">
                 
                 </span>
@@ -17,7 +17,7 @@
             <h4 class="mb-2">Welcome to Sneat! 👋</h4>
             <p class="mb-4">Please sign-in to your account and start the adventure</p>
 
-            <form id="formAuthentication" class="mb-3" action="index.html" method="POST">
+            <form id="formAuthentication" class="mb-3">
             <div class="mb-3">
                 <label for="email" class="form-label">Email or Username</label>
                 <input
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="mb-3">
-                <button class="btn btn-primary d-grid w-100" type="submit">Sign in</button>
+                <button class="btn btn-primary d-grid w-100"  type="button" (click)="login()">Sign in</button>
             </div>
             </form>
 
