--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
                   your profile.
                 </p>
 
-                <a href="javascript:;" class="btn btn-sm btn-outline-primary">View Badges</a>
+                <a (click)="viewBadges()" class="btn btn-sm btn-outline-primary">View Badges</a>
               </div>
             </div>
             <div class="col-sm-5 text-center text-sm-left">
